// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel keyframes extract keyframes basic 1`] = `
"import \\"./keyframes.test.emotion.css\\";

const rotate360 = \\"css-rotate360-f35ahc\\";"
`;

exports[`babel keyframes extract keyframes basic 2`] = `
"@animation css-rotate360-f35ahc {
    from {
        -webkit-transform: rotate(0deg);
        -ms-transform: rotate(0deg);
        transform: rotate(0deg)
    }
    to {
        -webkit-transform: rotate(360deg);
        -ms-transform: rotate(360deg);
        transform: rotate(360deg)
    }
}"
`;

exports[`babel keyframes extract keyframes with interpolation 1`] = `
"
const rotate360 = keyframes([], [endingRotation], function createEmotionStyledRules(x0) {
  return [{
    \\"from\\": {
      \\"WebkitTransform\\": \\"rotate(0deg)\\",
      \\"msTransform\\": \\"rotate(0deg)\\",
      \\"transform\\": \\"rotate(0deg)\\"
    },
    \\"to\\": {
      \\"WebkitTransform\\": \`rotate(\${x0})\`,
      \\"msTransform\\": \`rotate(\${x0})\`,
      \\"transform\\": \`rotate(\${x0})\`
    }
  }];
});"
`;

exports[`babel keyframes inline keyframes basic 1`] = `
"
const rotate360 = keyframes([], [], function createEmotionStyledRules() {
  return [{
    \\"from\\": {
      \\"WebkitTransform\\": \\"rotate(0deg)\\",
      \\"msTransform\\": \\"rotate(0deg)\\",
      \\"transform\\": \\"rotate(0deg)\\"
    },
    \\"to\\": {
      \\"WebkitTransform\\": \\"rotate(360deg)\\",
      \\"msTransform\\": \\"rotate(360deg)\\",
      \\"transform\\": \\"rotate(360deg)\\"
    }
  }];
});"
`;

exports[`babel keyframes inline keyframes with interpolation 1`] = `
"
const rotate360 = keyframes([], [endingRotation], function createEmotionStyledRules(x0) {
  return [{
    \\"from\\": {
      \\"WebkitTransform\\": \\"rotate(0deg)\\",
      \\"msTransform\\": \\"rotate(0deg)\\",
      \\"transform\\": \\"rotate(0deg)\\"
    },
    \\"to\\": {
      \\"WebkitTransform\\": \`rotate(\${x0})\`,
      \\"msTransform\\": \`rotate(\${x0})\`,
      \\"transform\\": \`rotate(\${x0})\`
    }
  }];
});"
`;
